http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-10-23 niel
	Add: New anime title regex in PPA to capture more titles correctly.
	Chg: Altered 'Complete Sequential' to 'Custom Sequential' in tmux settings, to avoid confusion
		of people thinking it is more complete than Simple.
	Chg: Update meaning of type field in videos table.
	Add: Videos controller, model, and tests.
2018-10-17 niel
	Fix: Make generic music subject regex actually matche the example. Simplify returns for
		CollectionsCleaning::generic() method.
	Fix: Remove $this->e0. No need to duplicate the constant.
2018-10-12 niel
	Chg: Rename updateTimeCheck function to updatedRecently. Change it to return true if the entry
		was updated within the last week, false otherwise.
2018-10-03 niel
	Fix: Make sure newly activated groups have TPG tables, if TPG mode is enabled and MGR mode is not.
2018-10-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.11.0


2018-09-18 niel
	Fix: Updated scripts in .../misc/testing/DB to use modern require_once syntax (instead of
		nesting multiple dirname() calls. Also added a new require_once to two scripts that need
		.../configuration/settings.php to run. Note they will cause an error if the file does not
		exist, but it should be obvious to the user what the problem is.
		 If any other scripts are complaining about missing nZEDb_* or other constants let me know
		 and I'll update them as well.
2018-09-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.10.0


2018-07-31 niel
	Mrg: Bring in updates for PHP 7.2 compatibility.
		***NOTE*** You *must* run `composer install` manually as the lithium framework version has